--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -9,7 +9,14 @@ server {
 
     # Proxy API requests to backend
     location /api/v1/ {
-        proxy_pass http://backend:8000;
+        resolver 127.0.0.11 valid=30s;
+
+        set $backend "autorec-production.up.railway.app";
+        
+        proxy_pass $backend;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
     }
