--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -11,7 +11,7 @@ server {
     location /api/v1/ {
         resolver 127.0.0.11 valid=30s;
 
-        set $backend "autorec-production.up.railway.app";
+        set $backend "http://autorec.railway.internal:8000";
         
         proxy_pass $backend;
         proxy_http_version 1.1;
