--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -8,12 +8,11 @@ server {
     }
 
     # Proxy API requests to backend
+    # Proxy API requests to backend
     location /api/v1/ {
-        resolver 127.0.0.11 valid=30s;
-
-        set $backend "http://autorec.railway.internal:8000";
+        # Use env var for backend URL (substituted at startup)
+        proxy_pass ${BACKEND_URL};
         
-        proxy_pass $backend;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
