--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -25,4 +25,5 @@ RUN mkdir -p /app/data
 
 # Command is override-able by docker-compose
 # Command uses shell form to interpolate $PORT variable
-CMD uvicorn app.main:app --host 0.0.0.0 --port ${PORT:-8000}
+# Listen on dual stack (IPv6 + IPv4) for Railway private network support
+CMD uvicorn app.main:app --host :: --port ${PORT:-8000}
