--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -13,6 +13,11 @@ server {
         # Use env var for backend URL (substituted at startup)
         proxy_pass ${BACKEND_URL};
         
+        # Increase timeouts for long-running AI/Reconciliation tasks
+        proxy_read_timeout 300s;
+        proxy_connect_timeout 300s;
+        proxy_send_timeout 300s;
+
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
