--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,4 +1,5 @@
 server {
+    # Listen on dynamic port provided by Railway ($PORT)
     listen ${PORT};
 
     location / {
@@ -8,9 +9,9 @@ server {
     }
 
     # Proxy API requests to backend
-    # Proxy API requests to backend
     location /api/v1/ {
         # Use env var for backend URL (substituted at startup)
+        # Variable MUST include protocol (e.g. http://...)
         proxy_pass ${BACKEND_URL};
         
         # Increase timeouts for long-running AI/Reconciliation tasks
