--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -24,6 +24,4 @@ COPY . .
 RUN mkdir -p /app/data
 
 # Command uses shell form to interpolate $PORT variable
-# Listen on :: (all interfaces, IPv6 + IPv4 dual-stack) for Railway's internal network
-# Railway's private network uses IPv6, so this is required
-CMD uvicorn app.main:app --host :: --port ${PORT:-8000}
+CMD uvicorn app.main:app --host 0.0.0.0 --port ${PORT:-8000}
