--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -24,4 +24,5 @@ COPY . .
 RUN mkdir -p /app/data
 
 # Command uses shell form to interpolate $PORT variable
-CMD uvicorn app.main:app --host :: --port ${PORT:-8000}
+# Listen on 0.0.0.0 (IPv4) - Standard for most Docker environments
+CMD uvicorn app.main:app --host 0.0.0.0 --port ${PORT:-8000}
