--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -8,6 +8,28 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
+
+    # WebSocket endpoint - MUST come before /api/v1/ to match first
+    location /api/v1/reconcile/ws {
+        proxy_pass ${BACKEND_URL};
+        
+        # WebSocket specific configuration
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        
+        # Standard headers
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        
+        # Long timeouts for persistent WebSocket connections
+        proxy_read_timeout 3600s;
+        proxy_send_timeout 3600s;
+        proxy_connect_timeout 60s;
+    }
+
     # Proxy API requests to backend
     location /api/v1/ {
         # Use env var for backend URL (substituted at startup)
