--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,21 +1,20 @@
-# Stage 1: Build
+# Stage 1: Build (Keep this the same)
 FROM node:18-alpine as build
-
 WORKDIR /app
 COPY package*.json ./
 RUN npm install
 COPY . .
 RUN npm run build
 
-# Stage 2: Serve
-FROM nginx:alpine
-COPY --from=build /app/dist /usr/share/nginx/html
+# Stage 2: Serve with Caddy
+FROM caddy:2-alpine
 
-# Copy config to 'templates' dir to enable auto-envsubst
-COPY nginx.conf /etc/nginx/templates/default.conf.template
+# Copy the build output to Caddy's default directory
+COPY --from=build /app/dist /usr/share/caddy
 
-# Default backend URL to prevent crash if not set (but should be set in Railway)
-ENV BACKEND_URL=http://localhost:8000
+# Copy your new Caddyfile
+COPY Caddyfile /etc/caddy/Caddyfile
 
+# Caddy uses the PORT env var automatically based on the Caddyfile above
 EXPOSE 80
-CMD ["nginx", "-g", "daemon off;"]
+CMD ["caddy", "run", "--config", "/etc/caddy/Caddyfile", "--adapter", "caddyfile"]
